src/test/ui/parser/keyword-fn-as-identifier.stderr
error: expected pattern, found keyword `fn`
  --> $DIR/keyword-fn-as-identifier.rs:4:9
   |
LL |     let fn = "foo"; //~ error: expected pattern, found keyword `fn`
   |         ^^ expected pattern

error: aborting due to previous error

