src/test/ui/parser/keyword-fn-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py fn'

fn main() {
    let fn = "foo"; //~ error: expected pattern, found keyword `fn`
}
